# proyecto-final-notos

./: .gitignore  .logos.txt  CMakeLists.txt  README.md  requirements.txt
cmake/: Compiler.cmake  Libraries.cmake
docs/: bitacora_ia.md
docs/arquitectura/: data.md  memoria.md  scheduler.md
docs/csv/: benchmark.csv
docs/results/: FIFO.csv  Round Robin.csv  Shortest Job First.csv
include/data/: List.h  Node.h  Queue.h  Stack.h
include/notOS/: notOS.h
include/notOS/core/: Memory.h  Process.h  Scheduler.h
include/notOS/data/: List.h  Node.h  Queue.h  Stack.h
include/notyOS/core/: Memory.h  Process.h  Scheduler.h
include/notyOS/data/: List.h  Node.h  Queue.h  Stack.h
scripts/: benchmark.py  generate_process.py  graph.py
src/: CMakeLists.txt  notOS.c
src/core/: CMakeLists.txt  Memory.c  Process.c  Scheduler.c
src/data/: CMakeLists.txt  List.c  Node.c  Queue.c  Stack.c
tests/: CMakeLists.txt  final_test.c
tests/core/: memory_test.c  scheduler_test.c
tests/data/: CMakeLists.txt  cola_test  cola_test.c  lista_test  lista_test.c  pila_test  pila_test.c
tests/final_test/: CMakeLists.txt  final_test  main.c
