#
#	   ________  ___      __           ______            _____           __   __            __          _ 
#	  / ____/  |/  /___ _/ /_____     / ____/___  ____  / __(_)___ _   _/_/  / /____  _____/ /______   | |
#	 / /   / /|_/ / __ `/ //_/ _ \   / /   / __ \/ __ \/ /_/ / __ `/  / /   / __/ _ \/ ___/ __/ ___/   / /
#	/ /___/ /  / / /_/ / ,< /  __/  / /___/ /_/ / / / / __/ / /_/ /  / /   / /_/  __(__  ) /_(__  )   / / 
#	\____/_/  /_/\__,_/_/|_|\___/   \____/\____/_/ /_/_/ /_/\__, /  / /    \__/\___/____/\__/____/  _/_/  
#	                                                       /____/   |_|                            /_/
#
#	Configuración para la compilación de los test.	
#


add_subdirectory(data)
add_subdirectory(final_test)


